Sticky navigation listo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ actualiza tu navegador para una mejor experiencia.</p>
 </p>
 <![endif ]-->
 <div class="video-container">
-<video autoplay height="720" loop poster="/videos/images/bbq.png" width="1280">
+<video autoplay height="720" loop poster="/videos/images/bbq.jpg" width="1280">
 <source src="/videos/mp4/bbq.mp4" type="video/mp4">
 <source src="/videos/webm/bbq.webm" type="video/webm">
 </video>
@@ -58,12 +58,12 @@ actualiza tu navegador para una mejor experiencia.</p>
 </li>
 </ul>
 </nav>
-<div class="absolute black large-padding bottom white-text full-width" id="description">
-<div class="row middle-xs">
+<div class="absolute black large-padding white-text full-width" id="description">
+<div class="row middle-xs center-xs">
 <div class="col-xs-7 col-sm-6 white-text medium">
 Atención cálida y comida preparada por artistas
 </div>
-<div class="col-xs">
+<div class="col-xs hidden" id="sticky-navigation">
 <div class="box">
 <nav class="text-right navigation">
 <ul class="list-inline">
@@ -87,5 +87,10 @@ Atención cálida y comida preparada por artistas
 </div>
 </div>
 <div class="full-height"></div>
+<script crossorigin="anonymous" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script>
+window.jQuery || document.write("<script src'/js/vendor/jquery-3.2.1.min.js'><\/script>")
+</script>
+<script src="/js/main.js"></script>
 </body>
 </html>
