agrego menu de imagenes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ actualiza tu navegador para una mejor experiencia.</p>
 <source src="/videos/webm/bbq.webm" type="video/webm">
 </video>
 </div>
-<div class="row full-height middle-xs center-xs relative up">
+<div class="row full-height middle-xs center-xs relative up" id="home">
 <div class="col-xs-12">
 <div class="box white-text">
 <img src="/images/logo.png" width="200">
@@ -86,7 +86,101 @@ Atención cálida y comida preparada por artistas
 </div>
 </div>
 </div>
-<div class="full-height"></div>
+<div class="text-center relative" id="menu">
+<div class="absolute white" id="menu-title">
+<h2 class="dancing-script title">Menú</h2>
+</div>
+<div class="row">
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/club-sandwich-thumb.jpg)">
+<!-- / %img{src:"/images/food/club-sandwich-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Club Sandwich</h3>
+<p class="no-margin">USD10.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/combo-thumb.jpg)">
+<!-- / %img{src:"/images/food/combo-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Combo hamburguesa</h3>
+<p class="no-margin">USD50.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/hamburger-thumb.jpg)">
+<!-- / %img{src:"/images/food/hamburger-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Hamburguesa</h3>
+<p class="no-margin">USD20.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/hot-cakes-thumb.jpg)">
+<!-- / %img{src:"/images/food/hot-cakes-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Hot cakes</h3>
+<p class="no-margin">USD30.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/panini-thumb.jpg)">
+<!-- / %img{src:"/images/food/panini-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Panini</h3>
+<p class="no-margin">USD15.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/papas-thumb.jpg)">
+<!-- / %img{src:"/images/food/papas-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Papas</h3>
+<p class="no-margin">USD10.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/club-sandwich-thumb.jpg)">
+<!-- / %img{src:"/images/food/club-sandwich-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Club Sandwich</h3>
+<p class="no-margin">USD10.00</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 food" style="background-image:url(/images/food/hamburger-thumb.jpg)">
+<!-- / %img{src:"/images/food/hamburger-thumb.jpg"} -->
+<div class="screen">
+<div class="row middle-xs full-height">
+<div class="col-xs-12 white-text">
+<h3 class="dancing-script subtitle">Hamburguesa</h3>
+<p class="no-margin">USD20.00</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 <script crossorigin="anonymous" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script>
 window.jQuery || document.write("<script src'/js/vendor/jquery-3.2.1.min.js'><\/script>")
