--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta content="Come rico en el mejor restaurante de la ciudad" name="description">
 <meta content="ie=edge" http-equiv="x-ua-compatible">
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+<meta content="6" data-name="image-counter">
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 <link href="css/normalize.css" rel="stylesheet">
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -177,6 +178,68 @@ Atención cálida y comida preparada por artistas
 <p class="no-margin">USD20.00</p>
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+<div id="gallery">
+<div class="inner">
+<div class="image" style="background-image:url(/images/food/club-sandwich.jpg)"></div>
+<div class="image" style="background-image:url(/images/food/papas.jpg)"></div>
+<div class="image" style="background-image:url(/images/food/hamburger.jpg)"></div>
+<div class="image" style="background-image:url(/images/food/panini.jpg)"></div>
+<div class="image" style="background-image:url(/images/food/club-sandwich.jpg)"></div>
+<div class="image" style="background-image:url(/images/food/papas.jpg)"></div>
+</div>
+</div>
+<div class="container">
+<div class="card white black-text-text-center relative">
+<h3 class="medium slim">
+En
+<strong class="dancing-script medium">RestauranteFacilito</strong>
+cocinar no es una profesión, no es una técnica, es un
+<strong class="dancing-script medium">arte</strong>
+</h3>
+<p class="top-space">
+Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
+<strong class="dancing-script medium">- Coco - Chef</strong>
+</p>
+</div>
+</div>
+<div class="black white-text full-height" id="contact">
+<div class="row middle-xs full-height">
+<div class="col-xs-12">
+<div class="box">
+<form action="https://formspree.io/uriel.hdzc@gmail.com" class="step-form" id="my-form" method="POST">
+<div class="row center-xs">
+<div class="col-xs-12">
+<div class="box">
+<p class="subtitle">Contacto</p>
+</div>
+</div>
+<div class="col-xs-2 col-md-1 text-right">
+<div class="box">
+<div class="active path-step" data-position="1"></div>
+<div class="path-step" data-position="2"></div>
+<div class="path-step" data-position="3"></div>
+</div>
+</div>
+<div class="col-md-5">
+<div class="box">
+<div class="fieldset step active">
+<input class="input" name="email" placeholder="Coloca tu correo electrónico" required type="email">
+</div>
+<div class="fieldset step">
+<input class="input" name="name" placeholder="¿Cuál es tu nombre?" required type="text">
+</div>
+<div class="fieldset step">
+<textarea class="input" name="body" placeholder="¿En qué podemos ayudarte?" required></textarea>
+<p class="small text-left" id="info"></p>
+</div>
+</div>
+</div>
+</div>
+</form>
 </div>
 </div>
 </div>
